force-app/main/default/objects/Send_Notification__e/Send_Notification__e.object-meta.xml
<CustomObject>
    <label>Send Notification</label>
    <pluralLabel>Send Notifications</pluralLabel>
</CustomObject>