force-app/main/default/objects/Send_Notification__e/fields/Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>Notification_Message__c</fullName>
    <label>Notification Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>