force-app/main/default/objects/Send_Notification__e/fields/Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>Notification_Number__c</fullName>
    <label>Notification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>