force-app/main/default/objects/Send_Notification__e/fields/NotificationId__c.field-meta.xml
<CustomField>
    <fullName>NotificationId__c</fullName>
    <label>NotificationId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>