force-app/main/default/objects/Send_Notification__e/fields/Recalled__c.field-meta.xml
<CustomField>
    <fullName>Recalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalled</label>
    <type>Checkbox</type>
</CustomField>